<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="#191970"
            android:textStyle="bold"
            android:text="@string/judul_artikel"
            android:textSize="55sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Judul"
                    android:textSize="27sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="13dp"/>

                <TextView
                    android:id="@+id/tv_item_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tanggal Publish"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_item_writer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penulis Artikel"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/action_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/action_share"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="Deskripsi"
            android:textColor="#000"
            android:justificationMode="inter_word"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="45sp"
            android:layout_marginTop="100dp"
            android:textStyle="bold"
            android:textColor="#191970"
            android:text="@string/judul_artikel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/deskripsi_artikel"
            android:textColor="#000"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="Kontak Kami"
            android:layout_marginTop="30dp"
            android:textColor="#191970" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Telepon"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/telepon_artikel" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosmed_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/email_artikel" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosmed_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosialmed_1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosmed_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosialmed_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosmed_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/sosialmed_3" />
        </TableRow>

    </LinearLayout>
</ScrollView>